# currenttracer

./: .gitignore  README.md  cmems_mod_glo_phy_my_0.083deg_P1D-m_uo-vo_72.58W-63.50W_28.83N-38.75N_0.49m_2025-12-23.nc  coarsen_zarr.py  convert_to_zarr.py  download_and_convert.py  download_data.py  environment.yml  plan.md  pyproject.toml  run.sh
currenttracer/: advection.py  data.py  server.py
currenttracer/static/: index.html  style.css
data/: README.md
tests/: conftest.py  test_advection.py  test_memory.py  test_server.py  test_visual.py
