[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "currenttracer"
version = "0.1.0"
description = "Trace ocean surface current trajectories on an interactive globe"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "xarray>=2024.1",
    "netcdf4>=1.6",
    "scipy>=1.12",
    "numpy>=1.26",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
include = ["currenttracer*"]

[project.scripts]
currenttracer = "currenttracer.server:main"
